# mocks

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: attempts.py  dashboard.py  exams.py  health.py  me.py  mock_tests.py  reference.py
app/core/: config.py  db.py  redis.py  security.py
app/schemas/: attempt.py  catalog.py  exam.py  insights.py  user.py
app/services/: ai_insights.py  analytics.py  exam_engine.py  streams.py
content/: dmat_pilot.json
content/dmat/: figseq.json  genacad.json  latsq.json  matheq.json
docs/: architecture.md  deploy-railway.md  frontend-integration.md  ui-handoff-dmat-test-player.md
docs/syllabus/: cbse.json  cbse.md  govt_job.json  govt_job.md  study_abroad.json  study_abroad.md  study_india.json  study_india.md
migrations/: 0001_init_mock_db.sql  0002_enable_rls.sql  0003_seed_dmat.sql  0004_registration_catalog.sql  0005_seed_registration_catalog.sql  0006_dashboard_mocktest_profile.sql  0007_deep_insights.sql  0008_question_content_hash.sql  0009_dmat_hard_skills.sql  0010_solutions.sql  0011_dmat_topic_skills.sql  0012_attempt_questions.sql  0013_dmat_linear_working_time.sql
scripts/: import_questions.py  seed_deep_insights.py  seed_demo_all.py  seed_dummy_analytics.py  seed_syllabus.py  smoke_test.py
supabase/functions/send-sms-hook/: index.ts
tests/: test_logic.py
